<resources>
    <string name="app_name">OpenMarket</string>
    <string name="app_icon">App Icon</string>
    <string name="title_activity_maps">Maps</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="show_on_map4">Show on Map</string>
    <string name="textview5">TextView</string>
    <string name="logintext">Login</string>
    <string name="registerText">Register</string>
    <string name="e_mailText">E-MAIL</string>
    <string name="passwordText">PASSWORD</string>
    <string name="e_mailNewText">E-mail</string>
    <string name="item_descriptionNewText">Item Description</string>
    <string name="full_nameNewText">Full name</string>
    <string name="addressNewText">Address</string>
    <string name="passwordNewText">Password</string>
    <string name="register_userNewText">Register User</string>
</resources>