<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFCC00"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="199dp"
        android:layout_height="167dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="106dp"
        android:contentDescription="@string/app_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/openmarket"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/buttonRegisterUser"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="162dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="162dp"
        android:background="#9933CC"
        android:text="@string/logintext"
        android:textColor="#FFCC00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="66dp"
        android:background="#9933CC"
        android:text="@string/registerText"
        android:textColor="#FFCC00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegisterUser"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="99dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/e_mailText"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#9933CC"
        android:textColorHint="#827717"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="102dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/passwordText"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#9933CC"
        android:textColorHint="#827717"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>