<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFCC00"
    tools:context=".RegisterUser">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="199dp"
        android:layout_height="167dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="106dp"
        android:contentDescription="@string/app_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/openmarket"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/editTextPrice"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="66dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="Price"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#9933CC"
        android:textColorHint="#827717"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextItem"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="66dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/e_mailNewText"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#9933CC"
        android:textColorHint="#827717"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFullName" />

    <EditText
        android:id="@+id/editTextItem"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="66dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/item_descriptionNewText"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#9933CC"
        android:textColorHint="#827717"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTextFullName"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="66dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/full_nameNewText"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#9933CC"
        android:textColorHint="#827717"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="66dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/addressNewText"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#9933CC"
        android:textColorHint="#827717"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPrice" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="66dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/passwordNewText"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#9933CC"
        android:textColorHint="#827717"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddress" />

    <Button
        android:id="@+id/buttonRegisterUser"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="65dp"
        android:background="#9933CC"
        android:text="@string/register_userNewText"
        android:textColor="#FFCC00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>